Add content to page

--- a/index.html
+++ b/index.html
@@ -11,84 +11,144 @@
   <div class="container">
     <header>
       <div class="search-container">
-        <img src="" alt="search-icon" width="20px" height="20px">
+        <img src="images/logos/magnify.svg" alt="search-icon" width="20px" height="20px">
         <input type="search" name="search" id="search">
       </div>
       <div class="user-account-container">
-        <img src="" alt="notification-icon" class="notification" width="20px" height="20px">
-        <img src="" alt="profile picture" class="pfp" width="50px" height="50px">
-        <p class="account-name">Name</p>
+        <img src="images/logos/bell-ring-outline.svg" alt="notification-icon" class="notification" width="20px"
+          height="20px">
+        <img src="images/logos/account-circle-outline.svg" alt="profile picture" class="pfp" width="40px" height="40px">
+        <p class="account-name">TurbulentTomato</p>
       </div>
       <div class="user-info-container">
-        <img src="" alt="profile picture" class="pfp">
-        <p class="greeting">Hi there, <span class="user-name">Username</span></p>
+        <img src="images/logos/account-circle-outline.svg" alt="profile picture" class="pfp" width="50px" height="50px">
+        <p class="greeting">Hi there, <span class="user-name">TurbulentTomato(@turbulenttomato)</span></p>
       </div>
       <div class="action-buttons-container">
         <ul class="action-buttons">
-          <li><button>New</button></li>
-          <li><button>Upload</button></li>
-          <li><button>Share</button></li>
+          <li><button type="button">New</button></li>
+          <li><button type="button">Upload</button></li>
+          <li><button type="button">Share</button></li>
         </ul>
       </div>
     </header>
 
     <nav class="sidebar">
-      <h2></h2>
+      <h2><img src="images/logos/view-dashboard.svg" alt="dashboard icon" width="40px" height="40px">Dashboard</h2>
       <div class="navigation-container">
         <ul class="navigation">
-          <li>item 1</li>
-          <li>item 2</li>
-          <li>item 3</li>
-          <li>item 4</li>
-          <li>item 5</li>
-          <li>item 6</li>
+          <li><img src="images/logos/home.svg" alt="home-icon" width="20px" height="20px">Home</li>
+          <li><img src="images/logos/card-account-details-outline.svg" alt="profile-icon" width="20px"
+              height="20px">Profile
+          </li>
+          <li><img src="images/logos/message-reply.svg" alt="messages-icon" width="20px" height="20px">Messages</li>
+          <li><img src="images/logos/history.svg" alt="history-icon" width="20px" height="20px">History</li>
+          <li><img src="images/logos/note-multiple.svg" alt="tasks-icon" width="20px" height="20px">Tasks</li>
+          <li><img src="images/logos/account-group.svg" alt="communities-icon" width="20px" height="20px">Communities
+          </li>
         </ul>
       </div>
       <div class="branding-container">
         <ul class="brandings">
-          <li>branding item 1</li>
-          <li>branding item 2</li>
-          <li>branding item 3</li>
+          <li><img src="images/logos/cog.svg" alt="settings-icon" width="20px" height="20px">Settings</li>
+          <li><img src="images/logos/help-box.svg" alt="support-icon" width="20px" height="20px">Support</li>
+          <li><img src="images/logos/shield-check.svg" alt="privacy-icon" width="20px" height="20px">Privacy</li>
         </ul>
       </div>
     </nav>
 
     <main>
       <div class="project-container">
+        <h2>Your projects</h2>
         <ul class="projects">
           <li>
-            <article>article 1</article>
+            <article>
+              <h3>Super cool project</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa doloribus eveniet alias exercitationem,
+                quo consequatur.</p>
+            </article>
           </li>
           <li>
-            <article>article 2</article>
+            <article>
+              <h3>Less cool project</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, quam velit? Officia esse
+                exercitationem, facere nihil cum qui magnam sed, nesciunt laudantium, ratione praesentium vitae nam!</p>
+            </article>
           </li>
           <li>
-            <article>article 3</article>
+            <article>
+              <h3>Impossible app</h3>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero doloremque ducimus fugit eum laborum
+                repellendus odit quod. Necessitatibus?
+              </p>
+            </article>
           </li>
           <li>
-            <article>article 4</article>
+            <article>
+              <h3>Easy peasy app</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium recusandae modi sunt vitae
+                necessitatibus pariatur, sequi eius eveniet error facere, reprehenderit consequuntur?
+              </p>
+            </article>
           </li>
           <li>
-            <article>article 5</article>
+            <article>
+              <h3>Ad blocker</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit officia asperiores nostrum, quos
+                odit iste molestias.</p>
+            </article>
           </li>
           <li>
-            <article>article 6</article>
+            <article>
+              <h3>Money maker</h3>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo possimus eaque sint dolorem officiis
+                totam inventore similique cupiditate ex earum saepe fugiat aperiam, asperiores reprehenderit eum
+                necessitatibus!</p>
+            </article>
           </li>
         </ul>
       </div>
       <div class="announcement-container">
         <ul class="announcements">
-          <li>announcement 1</li>
-          <li>announcement 2</li>
-          <li>announcement 3</li>
+          <li>
+            <h3>Site maintenance</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci veniam aut voluptates nemo voluptate
+              ipsam.</p>
+          </li>
+          <li>
+            <h3>Community share day</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum debitis incidunt aliquam quam expedita
+              error enim tenetur corporis?</p>
+          </li>
+          <li>
+            <h3>Updated privacy policy</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ea labore eveniet quo molestias?
+              Delectus, in eveniet!</p>
+          </li>
         </ul>
       </div>
       <div class="trending-container">
         <ul class="trending">
-          <li>trending 1</li>
-          <li>trending 2</li>
-          <li>trending 3</li>
-          <li>trending 4</li>
+          <li>
+            <img src="images/logos/account-circle-outline.svg" alt="profile picture" width="40px" height="40px">
+            <p class="user-tag">@jojo</p>
+            <p class="about">It was me, Dio!</p>
+          </li>
+          <li>
+            <img src="images/logos/account-circle-outline.svg" alt="profile picture" width="40px" height="40px">
+            <p class="user-tag">@black_lung</p>
+            <p class="about">Does this trolley go to Tahiti?</p>
+          </li>
+          <li>
+            <img src="images/logos/account-circle-outline.svg" alt="profile picture" width="40px" height="40px">
+            <p class="user-tag">@con_man</p>
+            <p class="about">Tahiti. Mango Farming. Paradise.</p>
+          </li>
+          <li>
+            <img src="images/logos/account-circle-outline.svg" alt="profile picture" width="40px" height="40px">
+            <p class="user-tag">@rockstar</p>
+            <p class="about">r/GTA6 members are losing their minds XD</p>
+          </li>
         </ul>
       </div>
     </main>
