Add images to articles

--- a/index.html
+++ b/index.html
@@ -66,14 +66,21 @@
               <h3>Super cool project</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa doloribus eveniet alias exercitationem,
                 quo consequatur.</p>
-            </article>
+          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+          </article>
           </li>
           <li>
             <article>
               <h3>Less cool project</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, quam velit? Officia esse
-                exercitationem, facere nihil cum qui magnam sed, nesciunt laudantium, ratione praesentium vitae nam!</p>
-            </article>
+                exercitationem, facere nihil cum qui magnam sed, nesciunt laudantium, ratione praesentium vitae nam!
+              </p>
+          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+          </article>
           </li>
           <li>
             <article>
@@ -81,7 +88,10 @@
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero doloremque ducimus fugit eum laborum
                 repellendus odit quod. Necessitatibus?
               </p>
-            </article>
+          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+          </article>
           </li>
           <li>
             <article>
@@ -89,13 +99,21 @@
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium recusandae modi sunt vitae
                 necessitatibus pariatur, sequi eius eveniet error facere, reprehenderit consequuntur?
               </p>
-            </article>
+          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+          </article>
           </li>
           <li>
             <article>
               <h3>Ad blocker</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit officia asperiores nostrum, quos
                 odit iste molestias.</p>
+              <ul class="quick-actions">
+                <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+              </ul>
             </article>
           </li>
           <li>
@@ -104,7 +122,10 @@
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo possimus eaque sint dolorem officiis
                 totam inventore similique cupiditate ex earum saepe fugiat aperiam, asperiores reprehenderit eum
                 necessitatibus!</p>
-            </article>
+          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+          </article>
           </li>
         </ul>
       </div>
