Change .account-name to .user-name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images/logos/bell-ring-outline.svg" alt="notification-icon" class="notification" width="20px"
           height="20px">
         <img src="images/logos/account-circle-outline.svg" alt="profile picture" class="pfp" width="40px" height="40px">
-        <p class="account-name">TurbulentTomato</p>
+        <p class="user-name">TurbulentTomato</p>
       </div>
       <div class="user-info-container">
         <img src="images/logos/account-circle-outline.svg" alt="profile picture" class="pfp" width="50px" height="50px">
