Add missing .quick-action ul tags

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
     </header>
 
     <nav class="sidebar">
-      <h2><img src="images/logos/view-dashboard.svg" alt="dashboard icon" width="40px" height="40px">Dashboard</h2>
+      <div class="dashboard">
+        <img src="images/logos/view-dashboard.svg" alt="dashboard icon" width="40px" height="40px">
+        <h2>
+          Dashboard
+        </h2>
+      </div>
       <div class="navigation-container">
         <ul class="navigation">
           <li><img src="images/logos/home.svg" alt="home-icon" width="20px" height="20px">Home</li>
@@ -66,10 +71,12 @@
               <h3>Super cool project</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa doloribus eveniet alias exercitationem,
                 quo consequatur.</p>
-          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
-          </article>
+              <ul class="quick-actions">
+                <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+              </ul>
+            </article>
           </li>
           <li>
             <article>
@@ -77,10 +84,12 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, quam velit? Officia esse
                 exercitationem, facere nihil cum qui magnam sed, nesciunt laudantium, ratione praesentium vitae nam!
               </p>
-          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
-          </article>
+              <ul class="quick-actions">
+                <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+              </ul>
+            </article>
           </li>
           <li>
             <article>
@@ -88,10 +97,12 @@
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero doloremque ducimus fugit eum laborum
                 repellendus odit quod. Necessitatibus?
               </p>
-          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
-          </article>
+              <ul class="quick-actions">
+                <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+              </ul>
+            </article>
           </li>
           <li>
             <article>
@@ -99,10 +110,12 @@
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium recusandae modi sunt vitae
                 necessitatibus pariatur, sequi eius eveniet error facere, reprehenderit consequuntur?
               </p>
-          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
-          </article>
+              <ul class="quick-actions">
+                <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+              </ul>
+            </article>
           </li>
           <li>
             <article>
@@ -122,10 +135,12 @@
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo possimus eaque sint dolorem officiis
                 totam inventore similique cupiditate ex earum saepe fugiat aperiam, asperiores reprehenderit eum
                 necessitatibus!</p>
-          <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
-          <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
-          </article>
+              <ul class="quick-actions">
+                <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
+                <li><img src="images/logos/share-outline.svg" alt="share icon" width="20px" height="20px"></li>
+              </ul>
+            </article>
           </li>
         </ul>
       </div>
