Add styling to project-container

--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
         <ul class="projects">
           <li>
             <article>
-              <h3>Super cool project</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa doloribus eveniet alias exercitationem,
-                quo consequatur.</p>
+              <div class="content">
+                <h3>Super cool project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa doloribus eveniet alias
+                  exercitationem,
+                  quo consequatur.</p>
+              </div>
               <ul class="quick-actions">
                 <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
                 <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
@@ -80,10 +83,12 @@
           </li>
           <li>
             <article>
-              <h3>Less cool project</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, quam velit? Officia esse
-                exercitationem, facere nihil cum qui magnam sed, nesciunt laudantium, ratione praesentium vitae nam!
-              </p>
+              <div class="content">
+                <h3>Less cool project</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, quam velit? Officia esse
+                  exercitationem, facere nihil cum qui magnam sed, nesciunt laudantium, ratione praesentium vitae nam!
+                </p>
+              </div>
               <ul class="quick-actions">
                 <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
                 <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
@@ -93,10 +98,12 @@
           </li>
           <li>
             <article>
-              <h3>Impossible app</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero doloremque ducimus fugit eum laborum
-                repellendus odit quod. Necessitatibus?
-              </p>
+              <div class="content">
+                <h3>Impossible app</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero doloremque ducimus fugit eum laborum
+                  repellendus odit quod. Necessitatibus?
+                </p>
+              </div>
               <ul class="quick-actions">
                 <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
                 <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
@@ -106,10 +113,12 @@
           </li>
           <li>
             <article>
-              <h3>Easy peasy app</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium recusandae modi sunt vitae
-                necessitatibus pariatur, sequi eius eveniet error facere, reprehenderit consequuntur?
-              </p>
+              <div class="content">
+                <h3>Easy peasy app</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium recusandae modi sunt vitae
+                  necessitatibus pariatur, sequi eius eveniet error facere, reprehenderit consequuntur?
+                </p>
+              </div>
               <ul class="quick-actions">
                 <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
                 <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
@@ -119,9 +128,12 @@
           </li>
           <li>
             <article>
-              <h3>Ad blocker</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit officia asperiores nostrum, quos
-                odit iste molestias.</p>
+              <div class="content">
+                <h3>Ad blocker</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit officia asperiores nostrum,
+                  quos
+                  odit iste molestias.</p>
+              </div>
               <ul class="quick-actions">
                 <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
                 <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
@@ -131,10 +143,12 @@
           </li>
           <li>
             <article>
-              <h3>Money maker</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo possimus eaque sint dolorem officiis
-                totam inventore similique cupiditate ex earum saepe fugiat aperiam, asperiores reprehenderit eum
-                necessitatibus!</p>
+              <div class="content">
+                <h3>Money maker</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo possimus eaque sint dolorem officiis
+                  totam inventore similique cupiditate ex earum saepe fugiat aperiam, asperiores reprehenderit eum
+                  necessitatibus!</p>
+              </div>
               <ul class="quick-actions">
                 <li><img src="images/logos/star-plus-outline.svg" alt="bookmark icon" width="20px" height="20px"></li>
                 <li><img src="images/logos/eye-plus-outline.svg" alt="view-later icon" width="20px" height="20px"></li>
