--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="container">
     <header>
       <div class="search-container">
-        <img src="images/logos/magnify.svg" alt="search-icon" width="20px" height="20px">
+        <label for="search"><img src="images/logos/magnify.svg" alt="search-icon" class="search-icon" width="20px"
+            height="20px"></label>
         <input type="search" name="search" id="search">
       </div>
       <div class="user-account-container">
@@ -35,29 +36,29 @@
 
     <nav class="sidebar">
       <div class="dashboard">
-        <img src="images/logos/view-dashboard.svg" alt="dashboard icon" width="40px" height="40px">
+        <img src="images/logos/view-dashboard.svg" alt="dashboard icon" width="50px" height="50px">
         <h2>
           Dashboard
         </h2>
       </div>
       <div class="navigation-container">
         <ul class="navigation">
-          <li><img src="images/logos/home.svg" alt="home-icon" width="20px" height="20px">Home</li>
-          <li><img src="images/logos/card-account-details-outline.svg" alt="profile-icon" width="20px"
-              height="20px">Profile
+          <li><img src="images/logos/home.svg" alt="home-icon" width="30px" height="30px">Home</li>
+          <li><img src="images/logos/card-account-details-outline.svg" alt="profile-icon" width="30px"
+              height="30px">Profile
           </li>
-          <li><img src="images/logos/message-reply.svg" alt="messages-icon" width="20px" height="20px">Messages</li>
-          <li><img src="images/logos/history.svg" alt="history-icon" width="20px" height="20px">History</li>
-          <li><img src="images/logos/note-multiple.svg" alt="tasks-icon" width="20px" height="20px">Tasks</li>
-          <li><img src="images/logos/account-group.svg" alt="communities-icon" width="20px" height="20px">Communities
+          <li><img src="images/logos/message-reply.svg" alt="messages-icon" width="30px" height="30px">Messages</li>
+          <li><img src="images/logos/history.svg" alt="history-icon" width="30px" height="30px">History</li>
+          <li><img src="images/logos/note-multiple.svg" alt="tasks-icon" width="30px" height="30px">Tasks</li>
+          <li><img src="images/logos/account-group.svg" alt="communities-icon" width="30px" height="30px">Communities
           </li>
         </ul>
       </div>
       <div class="branding-container">
         <ul class="brandings">
-          <li><img src="images/logos/cog.svg" alt="settings-icon" width="20px" height="20px">Settings</li>
-          <li><img src="images/logos/help-box.svg" alt="support-icon" width="20px" height="20px">Support</li>
-          <li><img src="images/logos/shield-check.svg" alt="privacy-icon" width="20px" height="20px">Privacy</li>
+          <li><img src="images/logos/cog.svg" alt="settings-icon" width="30px" height="30px">Settings</li>
+          <li><img src="images/logos/help-box.svg" alt="support-icon" width="30px" height="30px">Support</li>
+          <li><img src="images/logos/shield-check.svg" alt="privacy-icon" width="30px" height="30px">Privacy</li>
         </ul>
       </div>
     </nav>
@@ -159,17 +160,20 @@
         </ul>
       </div>
       <div class="announcement-container">
+        <h2>announcements</h2>
         <ul class="announcements">
           <li>
             <h3>Site maintenance</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci veniam aut voluptates nemo voluptate
               ipsam.</p>
           </li>
+          <hr>
           <li>
             <h3>Community share day</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum debitis incidunt aliquam quam expedita
               error enim tenetur corporis?</p>
           </li>
+          <hr>
           <li>
             <h3>Updated privacy policy</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ea labore eveniet quo molestias?
@@ -178,6 +182,7 @@
         </ul>
       </div>
       <div class="trending-container">
+        <h2>trending</h2>
         <ul class="trending">
           <li>
             <img src="images/logos/account-circle-outline.svg" alt="profile picture" width="40px" height="40px">
